--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     </head>
     
     <body class="page_body" onload="new_game()">
-        
+        <p class="win_text_one spin">you won!</p>
+        <p class="loss_text_one shake-opacity shake-constant">you lost!</p>
+        <p class="win_text_two other_spin">you won!</p>
+        <p class="loss_text_two shake-opacity shake-constant">you lost!</p>
         <div class="game_container">
             <p class="status">start guessing by hitting any key</p>
+            <br>
             <p class="word_mask"></p>
             <br>
             <p class="guesses_left">guesses left: </p>
